public/babelbooapp/app.css
/* ... */
.th img {
    height: 105px;
    position: relative;
    left: 100%; /* move the whole width of the image to the right */
    margin-left: -200%; /* magic! */
}

.playlist-icons {
    font-size:12px;
    color:#666666;
    padding: 2px 10px 5px 10px;
    clear:left;
}

.playlist-icons ul {
    margin-top: 0px;
}

.tag-awesome{
    font-size:12px;
    color:#666666;
    margin-right:-10px;
    padding-right:0px;
}

.tag-box{
    color: #777;
    font-size:12px;
    display: inline-block;
    padding-left: 5px;
    padding-right: 5px;
}

.not-found {
    margin-top: 200px;
    text-transform: lowercase;
    color: #8E8E8E;
    text-shadow: 1px 1px #eee;
}

.medal-gold {
    color: rgb(254, 214, 20);
}

.medal-silver {
    color: rgb(211, 224, 222);
}

.medal-bronze {
    color: rgb(220, 155, 122);
}

.playlist .medal {
    width: 28px;
    height: 28px;
    background-size: 28px 28px;
}

.playlist .medal-gold {
    background-image: url('/img/gold-small.png');
}

.playlist .medal-silver {
    background-image: url('/img/silver-small.png');
}

.playlist .medal-bronze {
    background-image: url('/img/bronze-small.png');
}

.playlist .medal-none {
    background-image: url('/img/none-small.png');
}

.summary-card {
    padding-top: 0px !important;
    width: 600px;
}

.summary-card .medal, .medals .medal {
    background-repeat: no-repeat;
    position: relative;
    top: -30px;
    background-position: 50% 0;
    height: 270px;
}

.summary-card .medal-gold, .medal-table .medal-gold {
    background-image: url('/img/gold.png');
}

.summary-card .medal-silver, .medal-table .medal-silver {
    background-image: url('/img/silver.png');
}

.summary-card .medal-bronze, .medal-table .medal-bronze {
    background-image: url('/img/bronze.png');
}

.sad-boo {
    background-image: url('/img/sad-boo.png');
    background-repeat: no-repeat;
    color: #00618C;
    font-size: 40px;
    font-weight: 500;
    height: 200px;
    margin-top: 20px;
    margin-left: 30px;
    padding-left: 135px;
    padding-top: 50px;
}

.medals {
    text-align: center !important;
}

.medals .medal {
    width: 32%;
    display: inline-block;
    padding-top: 160px;
    color: #333;
    font-size: 37px;
    margin-top: -15px;
    margin-bottom: -30px;
    font-weight: 900;
}

.playlist-icons .medal-gold, .playlist-icons .medal-silver, .playlist-icons .medal-bronze, .playlist-icons .medal-none {
    font-size: 2em;
    margin-top: 5px;
}

/*---------    PLAYLIST --------*/
.cine {
    background-color:#fff;
    max-width: 680px;
    margin: 10px auto 20px auto;
    border-radius: 3px;
    box-shadow: 1px 1px 3px #848484, 0px 0px 20px rgba(132, 132, 132, 0.3);
    vertical-align: top;
    text-align: left;
    overflow: hidden;
}

.cine > * {
    padding-left: 20px;
    padding-right: 20px;
    width: 100%;
}

.progress-cine {
    position: absolute;
    top: 0;
    right: 20px;
    margin-top: 0px;
}
.title-cine, .progress-cine {
    font-size:22px;
    font-weight: bold;
    margin-bottom: 5px;
}

.title-cine {
    color:#777;
    position: relative;
    min-height: 51px;
}

.title-cine .title {
    margin-right: 2.5em;
}

player-card .cine {
    padding-top: 0px;
}

player-card .title-cine p {
    margin-top: 10px;
    margin-bottom: 10px;
}

.question-txt{
    font-size:22px;
    font-weight: bold;
    padding-top: 10px;
    margin-bottom: 0px;
    margin-top: 0px;
}

.player-container {
    width: 100%;
    height: 360px;
    background-color: #222;
    display: inline-block;
    /*margin-left: 20px;
    padding-left: 0px;
    padding-right: 0px;*/
}

.answer {
    margin-top: 0px;
    width: 100%;
    display: inline-block;
}

.answer ul {
    margin: 0px;
    margin-bottom: 5px;
}

.answer label {
    margin: 0px;
    color: #333;
    font-weight: normal;
}

.answer li {
    border-radius: 15px;
    padding: 2px 8px 2px 8px;
}

.answer li:hover {
    background-color: #ddd;
}

.selected-answer {
    background-color: #54ACD2;
}

.selected-answer:hover {
    background-color: #449CC2 !important;
}

.selected-answer label::after, .selected-answer label::before {
    border: 2px solid #fff !important;
    background-color: #fff !important;
}

.answer .radio {
    margin: 0px;
}

.answer .radio label {
    width: 100%;
}

.already-answered {
    color: #fff;
    font-size: 22px;
    text-align: center;
    background-color: #3c763d;
    padding: 20px;
    margin-top: 7px;
}

.already-answered .fa-check {
    font-size: 60px;
}

.nav-list {
    margin:15px 15px 75px 10px;
    padding:0px;
    font-size: 20px;
    font-weight: bold;
}

.nav-list a {
    text-decoration: none;
}

.answer-symbol {
    color: #fff;
    font-size: 122px;
    margin-right: 5px;
    float: right;
}

.button-player {
    text-transform: uppercase;
    text-align: center;
    padding-top: 15px;
    padding-bottom: 15px;
    cursor: pointer;
    font-family: RobotoDraft, 'Helvetica Neue', Helvetica, Arial;
    border: none;
    text-decoration: none;
    border-top: 1px solid #ddd;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    display: block;
}

.button-player:hover {
    background-color: #ddd;
    color: #428bca;
    text-decoration: none;
}

.button-player:focus {
    color: #428bca;
    text-decoration: none;
}

.cine-right, .cine-wrong, .selected-answer,
.cine-right label, .cine-wrong label, .selected-answer label {
    color: #fff !important;
}

.cine-right {
    background-color: #3c763d !important;
}

.cine-wrong {
    background-color: #a94442 !important;
}

.cine-wrong .fa-times, .cine-right .fa-check {
    color: #fff;
    margin-left: -20px;
    font-size: 18px;
    margin-left: -31px;
    padding-right: 12px;
}

.cine-right .fa-check {
    margin-right: -2px;
}

.cine-right .fa-times {
    margin-right: 2px;
}

.cine-right:hover {
    background-color: #2c662d !important;
}

.cine-wrong:hover {
    background-color: #993432 !important;
}
/* ... */

